...
    <string name="per_100_g">(на 100 грамм)</string>
    <string name="history">Журнал</string>
    <string name="pref_first_start">is it the first start</string>
    <string name="welcome">Добро пожаловать! Для начала укажите информацию о себе для рассчёта нормы калорий и БЖУ.</string>
    <string name="goal">Цель</string>
    <string name="gender">Пол</string>
    <string name="age">Возраст</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="physical_activity">Коэффициент физ. активности:</string>
    <string name="formula">Формула рассчета калорий</string>
    <string name="recommended_nutrition">Рекомендуемое БЖУК</string>
    <string name="set_goal">Настройка цели</string>
    <string name="calc_result_dialog_text">Масса готового продукта - %1$.1f грамм\n
...
        Калорийность - %5$.1f\n</string>
    <string name="foodstuff_name_and_weight">%1$s, %2$.0f г</string>
    <string name="user_goal_finish_button_text">далее</string>
    <string name="top_header">Популярное</string>
    <string name="all_foodstuffs_header">Все продукты</string>
    <string name="foodstuffs">Продукты</string>
    <string name="profile">Профиль</string>
    <string name="create_new_foodstuff">Новый</string>
    <string name="weight_in_card">Масса, граммов</string>
    <string name="add_foodstuff">Добавить продукт</string>
    <string name="add_foodstuff_to_recipe">В рецепт</string>
    <string name="open_foodstuff_recipe">Рецепт</string>
    <string name="add_foodstuff_to_history">В журнал</string>
...
    <string name="work_with_recipe_canceled">Работа с рецептом прекращена</string>
    <string name="work_with_foodstuffs_canceled">Работа с продуктами прекращена</string>
    <string name="change_foodstuff">Изменить продукт</string>
    <string name="search_results">Результаты поиска \"%s\"</string>
    <string name="add_new_foodstuff">Добавить новый продукт</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="calorie_intake">Норма калорий:</string>
    <string name="set_current_weight">Изменить текущий вес</string>
    <string name="recommended_nutrition_ratio">Рекомендуемое БЖУ</string>
    <string name="how_it_is_calculated">Рассчитывается по формуле</string>
    <string name="last_measurements_date">Дата последних измерений</string>
    <string name="user_weight_with_colon">Вес:</string>
    <string name="hips_with_colon">Бёдра:</string>
    <string name="chest_with_colon">Грудь:</string>
    <string name="waist_with_colon">Талия:</string>
    <string name="user_weight">Вес</string>
    <string name="reached">Достигнуто</string>
    <string name="percent">%</string>
    <string name="set_user_params">Изменить данные</string>
    <string name="personal_data">Личные данные</string>
    <string name="user_name">Имя</string>
    <string name="user_surname">Фамилия</string>
    <string name="information">Информация</string>
    <string name="user_goal">Цель</string>
    <string name="lifestyle">Образ жизни</string>
    <string name="statistics">Статистические данные</string>
    <string name="fill_all_fields">Заполните все поля</string>
...
    <string name="active_lifestyle">Высокая активность</string>
    <string name="professional_sports">Очень высокая активность</string>

    <string name="harris_benedict">Харриса-Бенедикта</string>
    <string name="mifflin_jeor">Миффлина-Джеора</string>

    <string name="target_weight">Желаемый вес</string>
    <string name="kg">\ кг</string>
    <string name="cm">\ см</string>
    <string name="kcal">\ ккал</string>
    <string name="years">\ лет</string>
    <string name="last_measurements">Предыдущее значение на %s</string>
    <string name="new_measurements">Текущее значение на %s</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="progress">Прогресс</string>
    <string name="weight_change">Изменение веса, кг</string>
    <string name="total_for_day">Всего за день</string>
    <string name="of_n_grams">из %d г</string>
    <string name="of_n_calories">из %d ккал</string>
    <string name="period">Период</string>
    <string name="grams_abbrv">г</string>

    <string name="user_measurements_period_array_all_time">За всё время</string>
    <string name="user_measurements_period_array_year">За год</string>
    <string name="user_measurements_period_array_6_months">За пол года</string>
    <string name="user_measurements_period_array_month">За месяц</string>

    <string name="return_today">Сегодня</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="day_after_tomorrow">Послезавтра</string>
    <string name="yesterday">Вчера</string>
...
