<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <!--прогресс-бар-->
    <korablique.recipecalculator.ui.pluralprogressbar.AnimatedPluralProgressBar
        android:id="@+id/new_nutrition_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        custom:color0="#FFFF8E77"
        custom:color1="#FFFFE982"
        custom:color2="#FF5768E9"
        custom:corners_radii="10dp"
        custom:background_bar_color="#EFF1F6" />

    <!--табличка БЖУ-->
    <LinearLayout
        android:id="@+id/nutrition_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include
            android:id="@+id/protein_layout"
            layout="@layout/nutrition_layout_with_color"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <include
            android:id="@+id/fats_layout"
            layout="@layout/nutrition_layout_with_color"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <include
            android:id="@+id/carbs_layout"
            layout="@layout/nutrition_layout_with_color"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>