<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF1F6"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_profile_inactive"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_name"
                style="@style/MontserratBigWhiteText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/layout_button_edit"
                tools:text="Лилия Панова" />

            <include
                android:id="@+id/user_params_header"
                layout="@layout/user_params_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="@+id/user_name"
                app:layout_constraintTop_toBottomOf="@+id/user_name"/>

            <include
                android:id="@+id/include"
                layout="@layout/user_params_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toEndOf="@id/user_params_header"
                app:layout_constraintTop_toTopOf="@id/user_params_header"/>

            <FrameLayout
                android:id="@+id/layout_button_edit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rectangular_button_click_selector"
                app:layout_constraintEnd_toStartOf="@+id/layout_button_settings"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/button_edit"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_edit_white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_button_settings"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rectangular_button_click_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/button_settings"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_settings_white" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/set_current_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/VioletButton"
            android:text="@string/set_current_weight"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#EFF1F6"
            app:layout_constraintTop_toBottomOf="@id/set_current_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/progress_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/MontserratHeaderText"
                android:text="@string/progress"/>

            <Spinner
                android:id="@+id/measurements_period_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/user_measurements_period_array"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/progress_text_view"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                style="@style/RobotoMonoHintText"
                app:layout_constraintBottom_toTopOf="@+id/measurements_period_spinner"
                app:layout_constraintStart_toStartOf="@+id/measurements_period_spinner"
                android:text="@string/period"/>

            <ImageView
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/measurements_period_spinner"
                app:layout_constraintStart_toStartOf="@+id/measurements_period_spinner"
                app:layout_constraintEnd_toEndOf="@+id/measurements_period_spinner"
                android:src="@drawable/line"
                android:contentDescription="@null" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/chart_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_layout">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
        </FrameLayout>

        <!--рекомендуемое БЖУ-->
        <include
            android:id="@+id/recommended_header"
            layout="@layout/recommended_nutrition_ration_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/chart_layout" />

        <FrameLayout
            android:id="@+id/nutrition_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="2dp"
            android:paddingLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recommended_header"
            android:background="#FFFFFF">

            <include
                layout="@layout/nutrition_progress_with_values" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/measurements_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/nutrition_wrapper"
            app:layout_constraintStart_toStartOf="parent">

            <include layout="@layout/measurements_layout" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/progress_bar_parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/measurements_parent_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nutrition_wrapper"
            app:layout_constraintBottom_toTopOf="@id/done"
            android:layout_marginStart="5dp"
            android:background="#FFFFFF"
            android:visibility="gone">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/circular_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                app:cpb_background_progressbar_color="@color/colorDivider"
                app:cpb_background_progressbar_width="4dp"
                app:cpb_progressbar_color="@color/colorAccent"
                app:cpb_progressbar_width="4dp"
                app:cpb_progress="65"
                app:cpb_progress_max="100"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/done_percent"
                    style="@style/MontserratBoldProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    tools:text="65"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/done_checkmark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_checkmark"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/done_percent_sign"
                    style="@style/RobotoMonoHintText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/percent"
                    app:layout_constraintStart_toEndOf="@id/done_percent"
                    app:layout_constraintTop_toTopOf="@id/done_percent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/measurements_parent_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:background="#FFFFFF"
            style="@style/RobotoMonoHintText"
            android:text="@string/reached"
            android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>