...
        android:layout_marginTop="6dp"
        android:layout_marginLeft="3dp"
        android:background="@drawable/new_card_protein_icon"/>

    <!--значение-->
    <EditText
        android:id="@+id/nutrition_text_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nutrition_name"
        android:layout_marginTop="12dp"
        android:paddingStart="0dp"
...
